# SharePointRenamer

./: .replit  app.py  config.py  credentials.py  main.py  mfa.py  models.py  navigation.py  pyproject.toml  setup.py  sharepoint_client.py  utils.py
.streamlit/: config.toml
logs/: rename_operations.txt
