[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.20.0",
    "msal>=1.31.1",
    "msgraph-core>=1.3.1",
    "office365-rest-python-client>=2.5.14",
    "openai>=1.63.0",
    "requests>=2.32.3",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
]
